--- a/Automation_Test/SeleniumAdvantage/CoreFramework/CoreFramework.csproj
+++ b/Automation_Test/SeleniumAdvantage/CoreFramework/CoreFramework.csproj
@@ -9,6 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Reporter\Screenshots\**" />
+    <EmbeddedResource Remove="Reporter\Screenshots\**" />
+    <None Remove="Reporter\Screenshots\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="ExtentReports" Version="4.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
@@ -25,10 +31,6 @@
     <PackageReference Include="Selenium.Support" Version="4.5.1" />
     <PackageReference Include="Selenium.WebDriver" Version="4.5.1" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="107.0.5304.6200" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Reporter\Screenshots\" />
   </ItemGroup>
 
 </Project>
